html/table.html is add

--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
 
 <h1>welcome to my homepage</h1>
 <p>This is a paragraph.</p>
-<img src="image/dog.jpg" alt="개">
+<img src="./image/dog.jpg" alt="개">
+<br/>
+<a href="./html/table.html">html테이블 사용 방법이 궁금해?</a>
 
 </body>
 </html>
