--- a/index.html
+++ b/index.html
@@ -109,14 +109,14 @@ body {
 <body>
 
 <div class="header">
-  <h1>My Website</h1>
-  <p>Resize the browser window to see the effect.</p>
+  <h1>인터넷활용 - 나의 홈페이지</h1>
+  <p>20180870 송민수</p>
 </div>
 
 <div class="topnav">
-  <a href="#">Link</a>
-  <a href="#">Link</a>
-  <a href="#">Link</a>
+  <a href="./html/html/html.html">HTML</a>
+  <a href="#">CSS</a>
+  <a href="#">JAVASCRIPT</a>
   <a href="#" style="float:right">Link</a>
 </div>
 
